fix text overflow on character details view.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,6 +107,7 @@ div.character-card-container {
 div.character-name-container {
   align-items: center;
   flex-direction: column;
+  font-size: small;
 }
 
 .enemy-card,
